--- a/app/views/web/ost/index/_news_carousel_content.erb
+++ b/app/views/web/ost/index/_news_carousel_content.erb
@@ -20,7 +20,7 @@
 
       <%if item['news_list_image'] %>
         <div class="img-wrapper">
-          <img class="img-fluid" data-lazy="<%= raw(item['news_list_image']) %> "  alt="<%= raw(item['news_list_title']) %>"/>
+          <img class="img-fluid" data-lazy="<%= raw(item['news_list_image']) %>" />
         </div>
       <%end%>
     </div>
@@ -30,7 +30,7 @@
     <div class="article-wrapper" style="min-height: <%= min_height.to_f %>%;">
       <%if item['news_list_image'] %>
         <div class="img-wrapper">
-          <img class="img-fluid" data-lazy="<%= raw(item['news_list_image'])%>" alt="<%= raw(item['news_list_title']) %>"/>
+          <img class="img-fluid" data-lazy="<%= raw(item['news_list_image'])%>"/>
         </div>
       <%end%>
     </div>
