--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -82,7 +82,7 @@
                   <%= member[:desc] %>
                 </div>
                 <a  href="<%= member[:link] %>" target="_blank" class="disabled twitter-link">
-                  <img class="twitter-user-img mx-auto" src="<%= member[:profile] %>"  />
+                  <img class="twitter-user-img mx-auto" data-lazy="<%= member[:profile] %>"  />
                   <div class="twitter-handle mt-2 active" title="<%= member[:handle] %>">
                     <svg class="align-middle mr-2" style="height: 20px;width: 20px;">
                       <switch>
