--- a/app/views/web/ost/events_news/_jumbotron.erb
+++ b/app/views/web/ost/events_news/_jumbotron.erb
@@ -5,12 +5,11 @@
         <div class="row align-items-center">
 
           <div class="col-12 col-lg-6 jumbotron-content">
-            <h2 class="header">A wonderful serenity has taken possession of my soul</h2>
+            <h2 class="header">Latest News & Events</h2>
             <p class="mt-3 paragraph">
-              A wonderful serenity has taken possession of my entire
-              soul, like these sweet mornings of spring which I enjoy
-              with my whole heart. I am alone, and feel the charm of
-              existence in this spot, which was created for the.
+              Don't miss the latest news on OST development, the live podcasts
+              and interviews, and the events we are participating part at.
+              Subscribe to our newsletter to always stay up to date.
             </p>
             <div class="d-none d-lg-block">
               <a href="#events" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See Events">See Events</a>
