jumbotron color change

--- a/app/assets/stylesheets/web/ost/events-news/jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/events-news/jumbotron.scss
@@ -2,7 +2,7 @@
 @import "../../ost_theme/variables";
 
 .events-jumbotron{
-  background-color: $spray;
+  background-color: $cyan;
   .header, .paragraph{
       color: $white;
     }
