--- a/app/views/web/ost/events_news/_jumbotron.erb
+++ b/app/views/web/ost/events_news/_jumbotron.erb
@@ -36,8 +36,8 @@
   </div>
 </section>
 <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge d-none d-lg-block">
-  <polygon points="0,0 100,0 100,100" fill="#7DD5E4" stroke="#7DD5E4"></polygon>
+  <polygon points="0,0 100,0 100,100" fill="#438bad" stroke="#438bad"></polygon>
 </svg>
 <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge d-block d-lg-none">
-  <polygon points="0,0 0,100 100,0 " fill="#7DD5E4" stroke="#7DD5E4"></polygon>
+  <polygon points="0,0 0,100 100,0 " fill="#438bad" stroke="#438bad"></polygon>
 </svg>
