--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -41,6 +41,7 @@
             <li><a href="https://medium.com/ostdotcom" target="_blank" title="Blog">Blog</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>careers" title="Careers">Careers</a></li>
             <li><a href="https://help.ost.com" target="_blank" title="Support">Support</a></li>
+            <li><a href="https://www.dropbox.com/sh/9tatk8guo1602e9/AABcTfgOVSSh9oo1h6vcXMHpa?dl=0" target="_blank" title="Media Kit">Media Kit</a></li>
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
