--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -9,6 +9,7 @@
         ost_event_filtered.unshift(item)
       end
     end
+    ost_event_filtered = ost_event_filtered[0...3]
     if ost_event_filtered.present?
 %>
 
