--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -50,6 +50,7 @@
             <li><a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy">Privacy Policy</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>terms" title="Terms of Use">Terms of Use</a></li>
             <li><a href="https://openst.org" target="_blank" title="OpenST Foundation">OpenST Foundation</a></li>
+            <li><a href="https://help.ost.com/support/solutions/articles/35000122226-impressum" target="_blank" title="Impressum">Impressum</a></li>
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
