--- a/app/views/web/ost/events_news/_events_content.erb
+++ b/app/views/web/ost/events_news/_events_content.erb
@@ -25,7 +25,7 @@
             </div>
           </div>
         </a>
-        <div id = "calendar-list" class="d-none" >
+        <div class="d-none calendar-list" >
           <div class="calendar-buttons  row ">
             <button type="button" class="apple-btn btn btn-light text-left col-12"
                     data-subject="{{event_name}}"
