--- a/app/views/web/ost/events_news/_jumbotron.erb
+++ b/app/views/web/ost/events_news/_jumbotron.erb
@@ -7,9 +7,8 @@
           <div class="col-12 col-lg-6 jumbotron-content">
             <h2 class="header">Latest News & Events</h2>
             <p class="mt-3 paragraph">
-              Don't miss the latest news on OST development, the live podcasts
-              and interviews, and the events we are participating part at.
-              Subscribe to our newsletter to always stay up to date.
+              Check out the latest OST news, events, podcasts and interviews.<br>
+              Subscribe to our weekly newsletter to always stay up to date.
             </p>
             <div class="d-none d-lg-block">
               <a href="#events" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See Events">See Events</a>
