added events and news link in footer

--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -38,6 +38,7 @@
           <ul class="footer-nav list-unstyled">
             <li><a href="<%= GlobalConstant::Base.root_url %>team" title="Team">Team</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>partners" title="Partners">Partners</a></li>
+            <li><a href="<%= GlobalConstant::Base.root_url %>events-news" title="Events-News">Events & News</a></li>
             <li><a href="https://medium.com/ostdotcom" target="_blank" title="Blog">Blog</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>careers" title="Careers">Careers</a></li>
             <li><a href="https://help.ost.com" target="_blank" title="Support">Support</a></li>
