--- a/app/assets/stylesheets/web/default_ost.css
+++ b/app/assets/stylesheets/web/default_ost.css
@@ -12,4 +12,5 @@
  *= require web/common/_navbar
  *= require web/common/_ostsvgs
   *= require web/common/_news
+  *= require web/common/_cookie_consent
  */
