cookie consent reject btn

--- a/app/views/shared/web/common/_cookie_banner.erb
+++ b/app/views/shared/web/common/_cookie_banner.erb
@@ -1,5 +1,11 @@
 <div class="accept-cookie-wrapper " style="display: none;">
-  <button type="button" class="ml-2 mt-2 btn-reject-cookies"><span class="cross-sign">&times;</span></button>
+  <div>
+    <svg width="24" height="35" class="ml-2 mt-2 btn-reject-cookies">
+      <switch>
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#cross-mark"></use>
+      </switch>
+    </svg>
+  </div>
   <div class="ml-5 my-3 mx-3">
     We use cookies to provide you with the best browsing experience. The data collected by cookies is used to optimize the website for the visitors and deliver
     information to OST. We use essential cookies as well as third-party cookies. A detailed description of the cookies we use is found in our <a class="cookie-privacy-policy font-weight-bold" href="<%=GlobalConstant::Base.root_url%>privacy">Privacy Policy</a> .
