--- a/app/views/shared/web/common/_cookie_banner.erb
+++ b/app/views/shared/web/common/_cookie_banner.erb
@@ -7,8 +7,9 @@
     </svg>
   </div>
   <div class="ml-5 my-3 mx-3">
-    We use cookies to provide you with the best browsing experience. The data collected by cookies is used to optimize the website for the visitors and deliver
-    information to OST. We use essential cookies as well as third-party cookies. A detailed description of the cookies we use is found in our <a class="cookie-privacy-policy font-weight-bold" href="<%=GlobalConstant::Base.root_url%>privacy">Privacy Policy</a> .
+    We use cookies to provide you with the best browsing experience. We use essential cookies as well as third-party cookies.
+    You may refuse the third-party cookies by clicking X. A detailed description of the cookies we use can be found in our
+    <a class="cookie-privacy-policy font-weight-bold" href="<%=GlobalConstant::Base.root_url%>privacy">Privacy Policy</a> .
   </div>
   <div class="btn-accept-cookie-wrapper my-auto">
     <button type="button"  class="btn btn-primary btn-accept-cookie mr-3">Accept</button>
@@ -22,8 +23,9 @@
           <span aria-hidden="true">&times;</span>
         </button>
         <div class="mb-3 mx-3">
-          We use cookies to provide you with the best browsing experience. The data collected by cookies is used to optimize the website for the visitors and deliver
-          information to OST. We use essential cookies as well as third-party cookies. A detailed description of the cookies we use is found in our <a class="cookie-privacy-policy-modal font-weight-bold" href="<%=GlobalConstant::Base.root_url%>privacy">Privacy Policy</a> .
+          We use cookies to provide you with the best browsing experience. We use essential cookies as well as third-party
+          cookies. You may refuse the third-party cookies by clicking X. A detailed description of the cookies we use can be
+          found in our <a class="cookie-privacy-policy-modal font-weight-bold" href="<%=GlobalConstant::Base.root_url%>privacy">Privacy Policy</a> .
         </div>
         <div class="btn-accept-cookie-wrapper text-center">
           <button type="button" class="btn btn-primary btn-accept-cookie" data-dismiss="modal">Accept</button>
