--- a/app/views/shared/web/common/_cookie_banner.erb
+++ b/app/views/shared/web/common/_cookie_banner.erb
@@ -1,17 +1,17 @@
-<div class="accept-cookie-wrapper " style="display: none;">
+<div class="accept-cookie-wrapper px-3" style="display: none;">
   <div>
-    <svg width="24" height="35" class="ml-2 mt-2 btn-reject-cookies">
+    <svg width="24" height="35" class="ml-2 mr-4 mt-2 btn-reject-cookies">
       <switch>
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#cross-mark"></use>
       </switch>
     </svg>
   </div>
-  <div class="ml-5 my-3 mx-3">
+  <div class="my-3">
     We use cookies to provide you with the best browsing experience. We use essential cookies as well as third-party cookies.
     You may refuse the third-party cookies by clicking X. A detailed description of the cookies we use can be found in our
     <a class="cookie-privacy-policy font-weight-bold" href="<%=GlobalConstant::Base.root_url%>privacy">Privacy Policy</a> .
   </div>
-  <div class="btn-accept-cookie-wrapper my-auto">
+  <div class="btn-accept-cookie-wrapper my-auto ml-2">
     <button type="button"  class="btn btn-primary btn-accept-cookie mr-3">Accept</button>
   </div>
 </div>
