--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -547,4 +547,38 @@
     <path d="M23.994 16.95l-3.01-14.648a.347.347 0 0 0-.36-.275h-1.198a2.316 2.316 0 0 0-4.593 0h-1.717a2.316 2.316 0 1 0-2.295 2.605.347.347 0 0 0 0-.695 1.621 1.621 0 1 1 1.593-1.91h-2.316a.347.347 0 0 0 0 .694h4.755a2.316 2.316 0 0 0 2.278 1.911.347.347 0 1 0 0-.695 1.621 1.621 0 1 1 1.594-1.91h-2.289a.347.347 0 0 0 0 .694h3.744L19.6 5.56H6.649L7.17 2.72h.579a.347.347 0 1 0 0-.694H6.88a.347.347 0 0 0-.347.284l-.647 3.51C4.334 10.916.269 12.441.229 12.455a.347.347 0 0 0 .116.674c.024 0 1.77.01 3.983.016l-.632 3.822a.347.347 0 0 0 .347.404h13.549a.329.329 0 0 0 .076-.01c.026.007.052.01.079.01h5.906a.347.347 0 0 0 .34-.417l.001-.003zM6.485 6.253h12.83c-1.572 4.537-5.21 6.05-5.571 6.19-.612.034-6.994.02-11.963 0 1.405-.878 3.577-2.725 4.704-6.19zM4.453 16.674l.58-3.527H11.707c.633 0 1.158 0 1.533-.008.48-.006.679-.009.785-.072.523-.204 3.11-1.338 4.918-4.384l-1.64 7.982-12.85.009zm13.566 0l2.604-12.67 2.605 12.67h-5.209z" fill="#34445B" fill-rule="nonzero"/>
   </symbol>
 
+  <symbol id="android-test-economy-icon" viewBox="0 0 300 119">
+    <g fill="none" fill-rule="evenodd">
+      <path fill="#F9FDFD" fill-rule="nonzero" stroke="#A1C5D6" stroke-width="2" d="M1 1h298v117H1z"/>
+      <text fill="#597A84" font-family="Quasimoda-Bold, Quasimoda" font-size="36" font-weight="bold" transform="translate(111 19)">
+        <tspan x="0" y="34">Android</tspan>
+      </text>
+      <text fill="#597A84" font-family="Quasimoda-Regular, Quasimoda" font-size="20" letter-spacing="1.1" transform="translate(111 76)">
+        <tspan x="0" y="19">Download App</tspan>
+      </text>
+      <path stroke="#597A84" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M265 84l6 6.501L265 97"/>
+      <g fill-rule="nonzero" transform="translate(24 30)">
+        <circle cx="30" cy="30" r="30" fill="#438BAD"/>
+        <path fill="#FFF" d="M22.953 8.06a1.015 1.015 0 0 0-.11.028.88.88 0 0 0-.628.55.882.882 0 0 0 .11.83l1.859 2.817c-3.148 1.67-5.408 4.552-5.934 7.979v.193a.93.93 0 0 0 0 .138v1.242a3.413 3.413 0 0 0-1.75-.496c-1.924 0-3.5 1.59-3.5 3.533v10.602c0 1.943 1.576 3.534 3.5 3.534.643 0 1.23-.19 1.75-.497v2.264c0 1.453 1.186 2.65 2.625 2.65h.875v5.301c0 1.943 1.576 3.534 3.5 3.534s3.5-1.59 3.5-3.534v-5.3h3.5v5.3c0 1.943 1.576 3.534 3.5 3.534s3.5-1.59 3.5-3.534v-5.3h.875c1.439 0 2.625-1.198 2.625-2.65v-2.265c.52.307 1.107.497 1.75.497 1.924 0 3.5-1.59 3.5-3.534V24.874c0-1.943-1.576-3.533-3.5-3.533-.643 0-1.23.19-1.75.496v-1.214c.01-.083.01-.166 0-.249v-.055c-.51-3.451-2.769-6.357-5.934-8.034l1.86-2.816a.885.885 0 0 0 .02-1.004.866.866 0 0 0-.923-.377.875.875 0 0 0-.546.387l-2.051 3.064a13.697 13.697 0 0 0-4.676-.8c-1.647 0-3.233.276-4.676.8l-2.05-3.064a.877.877 0 0 0-.82-.414zm7.547 4.446c1.644 0 3.186.324 4.54.91a.486.486 0 0 0 .081.028c2.738 1.212 4.73 3.48 5.496 6.13H20.383c.755-2.613 2.707-4.853 5.387-6.074a.734.734 0 0 0 .164-.083c1.36-.594 2.912-.911 4.566-.911zm-4.813 2.65c-.728 0-1.312.594-1.312 1.325 0 .735.584 1.326 1.313 1.326.724 0 1.312-.59 1.312-1.326a1.32 1.32 0 0 0-1.313-1.325zm9.625 0A1.32 1.32 0 0 0 34 16.481c0 .735.588 1.326 1.313 1.326.728 0 1.312-.59 1.312-1.326 0-.731-.584-1.325-1.313-1.325zM20 21.341h21v19.436a.868.868 0 0 1-.875.884h-6.836a.88.88 0 0 0-.355 0H22.789a.88.88 0 0 0-.355 0h-1.559a.868.868 0 0 1-.875-.884V21.341zm-3.5 1.766c.978 0 1.75.78 1.75 1.767v10.602c0 .987-.772 1.767-1.75 1.767s-1.75-.78-1.75-1.767V24.874c0-.987.772-1.767 1.75-1.767zm28 0c.978 0 1.75.78 1.75 1.767v10.602c0 .987-.772 1.767-1.75 1.767s-1.75-.78-1.75-1.767V24.874c0-.987.772-1.767 1.75-1.767zm-21 20.32H27v5.301c0 .987-.772 1.767-1.75 1.767s-1.75-.78-1.75-1.767v-5.3zm10.5 0h3.5v5.301c0 .987-.772 1.767-1.75 1.767S34 49.715 34 48.728v-5.3z"/>
+      </g>
+    </g>
+  </symbol>
+
+  <symbol id="ios-test-economy-icon" viewBox="0 0 300 119">
+    <g fill="none" fill-rule="evenodd">
+      <path fill="#F9FDFD" fill-rule="nonzero" stroke="#A1C5D6" stroke-width="2" d="M1 1h298v117H1z"/>
+      <text fill="#597A84" font-family="Quasimoda-Bold, Quasimoda" font-size="36" font-weight="bold" transform="translate(109 19)">
+        <tspan x="0" y="34">iOS</tspan>
+      </text>
+      <text fill="#597A84" font-family="Quasimoda-Regular, Quasimoda" font-size="20" letter-spacing="1.1" transform="translate(109 76)">
+        <tspan x="0" y="19">Download App</tspan>
+      </text>
+      <path stroke="#597A84" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M263.145 84.39l5.839 5.55-5.84 5.548"/>
+      <path fill="#438CAD" fill-rule="nonzero" d="M43.364 30C34.343 30 27 37.343 27 46.364v27.272C27 82.657 34.343 90 43.364 90h27.272C79.657 90 87 82.657 87 73.636V46.364C87 37.343 79.657 30 70.636 30H43.364z"/>
+      <path fill="#F9FDFD" d="M38.665 50c-.959 0-1.665.683-1.665 1.582 0 .886.706 1.569 1.665 1.569.958 0 1.667-.683 1.667-1.569 0-.899-.709-1.582-1.667-1.582zm14.413 1C48.116 51 45 54.475 45 60.06c0 5.574 3.056 9.072 8.078 9.072 5.01 0 8.054-3.51 8.054-9.071 0-5.573-3.069-9.06-8.054-9.061zm17.684 0c-3.774 0-6.293 2.05-6.293 5.13 0 2.54 1.426 4.052 4.554 4.783l2.23.54c2.289.54 3.297 1.33 3.297 2.648 0 1.534-1.583 2.647-3.74 2.647-2.311 0-3.918-1.041-4.147-2.682H64c.192 3.093 2.768 5.069 6.602 5.069 4.1 0 6.664-2.072 6.664-5.38 0-2.6-1.461-4.04-5.01-4.866l-1.904-.469c-2.253-.528-3.164-1.235-3.164-2.469 0-1.558 1.415-2.575 3.537-2.575 2.014 0 3.402.992 3.654 2.586h2.613C76.836 53.049 74.274 51 70.762 51z"/>
+      <path fill="#438BAD" d="M53.177 53.006c3.594 0 5.81 2.781 5.81 7.173 0 4.365-2.217 7.185-5.81 7.185-3.63 0-5.833-2.818-5.833-7.185 0-4.392 2.267-7.172 5.833-7.173z"/>
+      <path fill="#F9FDFD" d="M37 56v13.05h2.565V56z"/>
+    </g>
+  </symbol>
+
 </svg>
