margin left only on lg device

--- a/app/views/web/ost_wallet/launch.erb
+++ b/app/views/web/ost_wallet/launch.erb
@@ -14,7 +14,7 @@
               </switch>
             </svg>
           </a>
-          <a class="d-inline-block ml-3" href="<%= @launch_data['android_app_download_link'] %>" target="_blank" title="Download Android App">
+          <a class="d-inline-block ml-lg-3" href="<%= @launch_data['android_app_download_link'] %>" target="_blank" title="Download Android App">
             <svg>
               <switch>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#android-test-economy-icon"></use>
