--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -288,7 +288,7 @@
       </h6>
 
       <p class="ml-2">
-        OST Wallet is a mobile app and it is a part from OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" target="_blank">Fabric</a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. This data will be collected if you agree with the Privacy Policy when creating your PIN in the OST Wallet App.
+        OST Wallet is a mobile app and it is a part from OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. This data will be collected if you agree with the Privacy Policy when creating your PIN in the OST Wallet App.
       </p>
 
       <table border="1" class="w-75 mb-4 ml-2">
