--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -69,7 +69,7 @@
         <thead>
           <tr>
             <th class="w-25">Data Subject</th>
-            <th>Personal Information Collected</th>
+            <th>Personal Data Collected</th>
             <th>Reason / Legal Basis</th>
             <th>Retention</th>
           </tr>
