--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-12">
       <h2 class="mt-4 mb-2">Privacy Policy</h2>
-      <p>Last Updated: June 14, 2019</p>
+      <p>Last Updated: June 17, 2019</p>
       <h5 class="mt-4 pt-2">1. INTRODUCTION</h5>
       <p>
         We are OST.com Limited of Hong Kong and our company registration number is 2570554 (“OST.com Limited”, “we” or “us”). Your privacy is important to us. We are committed to protecting the privacy, confidentiality, and security of information relating to individuals (“Personal Data”) that we hold by complying with the requirements under applicable laws and regulations.
@@ -288,7 +288,7 @@
       </h6>
 
       <p class="ml-2">
-        OST Wallet is a mobile app and it is a part from OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. This data will be collected if you agree with the Privacy Policy when creating your PIN in the OST Wallet App.
+        OST Wallet is a mobile app and it is apart from the OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. If you wish to opt out from the collection of this data, please contact us at privacy@ost.com.
       </p>
 
       <table border="1" class="w-75 mb-4 ml-2">
