--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -288,7 +288,7 @@
       </h6>
 
       <p class="ml-2">
-        OST Wallet is a mobile app and it is apart from the OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. If you wish to opt out from the collection of this data, please contact us at privacy@ost.com.
+        OST Wallet is a mobile app and it is a part of the OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. If you wish to opt out from the collection of this data, please contact us at privacy@ost.com.
       </p>
 
       <table border="1" class="w-75 mb-4 ml-2">
