--- a/app/assets/stylesheets/web/common/_cookie_consent.scss
+++ b/app/assets/stylesheets/web/common/_cookie_consent.scss
@@ -39,5 +39,9 @@
         border-bottom: solid 1px $yellow-300;
       }
   }
-
+.modal{
+  .btn-reject-cookies{
+    float : left !important;
+  }
+}
 
