--- a/app/views/shared/web/common/_cookie_banner.erb
+++ b/app/views/shared/web/common/_cookie_banner.erb
@@ -18,14 +18,14 @@
 <div class="modal demo-modal" tabindex="-1" role="dialog" >
   <div class="modal-dialog demo-modal-dialog"  role="document">
     <div class="modal-content">
-      <div class="modal-body ">
-        <button type="button" class=" btn-reject-cookies"  data-dismiss="modal" aria-label="Close">
+      <div>
+        <button type="button" class="ml-3 mt-3 close btn-reject-cookies"  data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <div class="mb-3 mx-3">
-          We use cookies to provide you with the best browsing experience. We use essential cookies as well as third-party
-          cookies. You may refuse the third-party cookies by clicking X. A detailed description of the cookies we use can be
-          found in our <a class="cookie-privacy-policy-modal font-weight-bold" href="<%=GlobalConstant::Base.root_url%>privacy">Privacy Policy</a> .
+      </div>
+      <div class="modal-body ">
+        <div class="mb-3 mx-3 text-center">
+          We use cookies to provide you with the best browsing experience. We use essential cookies as well as third-party cookies. You may refuse the third-party cookies by clicking X. A detailed description of the cookies we use can be found in our  <a class="cookie-privacy-policy-modal font-weight-bold" href="<%=GlobalConstant::CompanyOtherProductUrls.kit_root_url%>privacy">Privacy Policy</a> .
         </div>
         <div class="btn-accept-cookie-wrapper text-center">
           <button type="button" class="btn btn-primary btn-accept-cookie" data-dismiss="modal">Accept</button>
