--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-12">
       <h2 class="mt-4 mb-2">Privacy Policy</h2>
-      <p>Last Updated: June 17, 2019</p>
+      <p>Last Updated: June 26, 2019</p>
       <h5 class="mt-4 pt-2">1. INTRODUCTION</h5>
       <p>
         We are OST.com Limited of Hong Kong and our company registration number is 2570554 (“OST.com Limited”, “we” or “us”). Your privacy is important to us. We are committed to protecting the privacy, confidentiality, and security of information relating to individuals (“Personal Data”) that we hold by complying with the requirements under applicable laws and regulations.
@@ -425,6 +425,7 @@
         <li><span class="font-weight-bold">Google Analytics</span> for our analysis and tracking needs.</li>
         <li><span class="font-weight-bold">Google Tag Manager</span> (GTM), is processing data from Google Analytics and Google Adwords.</li>
         <li><span class="font-weight-bold">Google reCAPTCHA</span> for security measures.</li>
+        <li><span class="font-weight-bold">Google Optimize</span> to perform A / B testing on our content and design online. Google Optimize uses Google Analytics cookies in order to collect  information about the visitors on our websites.</li>
         <li class="list-unstyled font-weight-bold">Google Analytics</li>
         <li class="list-unstyled mb-3">We use Google Analytics to analyze the use of our website. Our analytics service provider generates statistical and other information about website use by means of cookies. Google Analytics is present on the website and software through the means of Google Tag Manager which through its code snippet is delivering the Google Analytics cookie.</li>
         <li class="list-unstyled mb-3">The information generated relating to our website is used to create reports about the use of our website. Google Analytics privacy policies are available at http://www.google.com/policies/privacy/</li>
@@ -467,6 +468,8 @@
       <p class="ml-3">Most internet browsers have a facility that will allow you to disable cookies altogether – please refer to your browser’s help menu to find out how to do this. Also, you may always go to your browser history settings and clean your cookies.</p>
 
       <p class="ml-3">You typically have the ability to accept or decline cookies by modifying the settings in your browser. If you choose to disable cookies, you may still use our site; however, you may have limited access to some areas within our website.</p>
+
+      <p class="ml-3">Additionally, you may use the following Google Add-on in order to opt-out from cookies: <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="color: #007bff" class="font-weight-bold"><u>https://tools.google.com/dlpage/gaoptout</u></a></p>
 
       <p class="ml-3">We also include web beacons in the emails we deliver for you. We use the data from those web beacons to create the reports about how your email campaign performed and what actions your Subscribers took. Reports are also available to us when we send email to you, so we may collect and review that information.</p>
 
