--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -578,18 +578,12 @@
         </tr>
 
         <tr>
-          <td>gdpr_decline</td>
+          <td>privacy_banner_dismiss</td>
           <td>User did not accept the cookie banner.</td>
           <td>Necessary</td>
           <td>6 months</td>
         </tr>
 
-        <tr>
-          <td>gdpe_accept</td>
-          <td>User accepted the cookie banner.</td>
-          <td>Necessary</td>
-          <td>1 year</td>
-        </tr>
 
         </tbody>
 
