--- a/app/assets/stylesheets/web/common/_cookie_consent.scss
+++ b/app/assets/stylesheets/web/common/_cookie_consent.scss
@@ -2,46 +2,81 @@
 // Import theme variables
 @import "web/ost_theme/variables";
 
-.cookie-privacy-policy-modal {
-  color: $blue-800;
-  border-bottom: solid 1px $yellow-300;
-
-}
-.demo-modal-dialog {
-  position: fixed;
-  top: 30%;
-}
-
 .accept-cookie-wrapper{
   position: fixed;
-  max-width: 100%;
-  top: auto;
-  right: auto;
-  bottom: 0px;
-  left: auto;
+  width: 850px;
+  bottom: 20px;
+  left:50%;
+  transform: translate(-50%,0);
   z-index: 1050;
-  background-color: $blue-900;
-  color: $white;
-  display: flex;
-  flex-direction: row;
+  background-color: #f0f0f0;
+  color: $blue-900;
+  box-shadow: 0px 2px 5px -2px rgba(52,68,91,0.51);
+  //display: flex;
+  //flex-direction: row;
+  @media(max-width: map-get($grid-breakpoints, 'sm')) {
+    left:0;
+    width:auto;
+    bottom: 0;
+    transform: translate(0,0);
+  }
+  .cross-icon{
+    position: absolute;
+    right:0;
+    top:50%;
+    transform: translate(0,-50%);
 
+  }
   .btn-reject-cookies {
     cursor: pointer;
+  }
 
-    .cross-sign{
-      display: inline-block;
-      line-height: 1;
-      font-size: 15px;
+  .text-link{
+    color: #e4b030!important;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 0.8rem;
+    letter-spacing: 2.5px;
+    display: inline-block;
+    position: relative;
+    padding: 5px 0;
+    &:hover{
+      text-decoration: none;
+      outline: none;
+      &:before, &:after{
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        transform: scale(1);
+      }
+      &:after{
+        top: 0%;
+        opacity: 1;
+      }
+    }
+    &:before, &:after{
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: #e4b030;
+      content: '';
+      -webkit-transition: -webkit-transform 0.3s;
+      -moz-transition: -moz-transform 0.3s;
+      transition: transform 0.3s;
+    }
+    &:after{
+      opacity: 0;
+      -webkit-transition: top 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+      -moz-transition: top 0.3s, opacity 0.3s, -moz-transform 0.3s;
+      transition: top 0.3s, opacity 0.3s, transform 0.3s;
     }
   }
-  .cookie-privacy-policy {
-        color: $white;
-        border-bottom: solid 1px $yellow-300;
-      }
+  .privacy-link{
+    text-transform: none;
+    font-size: 16px;
+    letter-spacing: 0;
+
   }
-.modal{
-  .btn-reject-cookies{
-    float : left !important;
   }
-}
 
