--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -546,19 +546,9 @@
   <symbol id="events-news-dropdown" viewBox="0 0 24 18">
     <path d="M23.994 16.95l-3.01-14.648a.347.347 0 0 0-.36-.275h-1.198a2.316 2.316 0 0 0-4.593 0h-1.717a2.316 2.316 0 1 0-2.295 2.605.347.347 0 0 0 0-.695 1.621 1.621 0 1 1 1.593-1.91h-2.316a.347.347 0 0 0 0 .694h4.755a2.316 2.316 0 0 0 2.278 1.911.347.347 0 1 0 0-.695 1.621 1.621 0 1 1 1.594-1.91h-2.289a.347.347 0 0 0 0 .694h3.744L19.6 5.56H6.649L7.17 2.72h.579a.347.347 0 1 0 0-.694H6.88a.347.347 0 0 0-.347.284l-.647 3.51C4.334 10.916.269 12.441.229 12.455a.347.347 0 0 0 .116.674c.024 0 1.77.01 3.983.016l-.632 3.822a.347.347 0 0 0 .347.404h13.549a.329.329 0 0 0 .076-.01c.026.007.052.01.079.01h5.906a.347.347 0 0 0 .34-.417l.001-.003zM6.485 6.253h12.83c-1.572 4.537-5.21 6.05-5.571 6.19-.612.034-6.994.02-11.963 0 1.405-.878 3.577-2.725 4.704-6.19zM4.453 16.674l.58-3.527H11.707c.633 0 1.158 0 1.533-.008.48-.006.679-.009.785-.072.523-.204 3.11-1.338 4.918-4.384l-1.64 7.982-12.85.009zm13.566 0l2.604-12.67 2.605 12.67h-5.209z" fill="#34445B" fill-rule="nonzero"/>
   </symbol>
-  <symbol id="cross-mark" viewBox="0 0 10 10">
-    <title>Group</title>
-    <desc>Created with Sketch.</desc>
-    <g id="Extras" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-      <g id="Artboard" transform="translate(-129.000000, -114.000000)">
-        <g id="Group" transform="translate(129.000000, 114.000000)">
-          <circle id="Oval" fill="#FFFFFF" cx="5" cy="5" r="5"></circle>
-          <g id="Group-5" transform="translate(2.903226, 2.903226)" stroke="#3C5056" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.6">
-            <path d="M3.55271368e-15,4.54747351e-13 L4.09544426,4.09544426" id="Path-6"></path>
-            <path d="M3.55271368e-15,0 L4.09544426,4.09544426" id="Path-6" transform="translate(2.047722, 2.047722) scale(-1, 1) translate(-2.047722, -2.047722) "></path>
-          </g>
-        </g>
-      </g>
+  <symbol id="cross-mark" viewBox="0 0 10 12">
+    <g stroke="#34445B" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M9.828 1.153L.147 10.835M.147 1.153l9.68 9.682"/>
     </g>
   </symbol>
 
